<resources>
    <string name="app_name">ImgFlix</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Don\'t have an account? </string>
    <string name="sign_up"> sign Up</string>
    <string name="create_your_account">Create your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="coding_staff">coding staff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="save">save</string>
    <string name="saved_images">saved images</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>


</resources>