<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/application_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aguafina_script"
        android:textColor="@color/darkPurple"
        android:text="@string/app_name"

        android:textSize="48sp" />
    <TextView
        android:id="@+id/tvCreateMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="20sp"
        android:layout_below="@+id/application_logo"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        />

    <EditText
        android:id="@+id/edRegMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCreateMail"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints=""

        />
    <EditText
        android:id="@+id/edFirstPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edRegMail"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints=""

        />
    <EditText
        android:id="@+id/second_attempt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edFirstPass"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:autofillHints=""

        />
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_attempt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"

        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="34sp" />
    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_marginStart="3dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/tvCreate"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/darkPurple"
        android:textStyle="bold" />

</RelativeLayout>