<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.loginActivity">

    <TextView
        android:id="@+id/application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aguafina_script"
        android:textColor="@color/darkPurple"
        android:text="@string/app_name"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tvLogMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textSize="20sp"
        android:layout_below="@+id/application"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        />
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogMail"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="textHint"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="textHint"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvForgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/edPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgottenPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"

        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/create_an_account"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginStart="3dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/tvCreateAccount"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textColor="@color/darkPurple"
        android:textStyle="bold" />


</RelativeLayout>